fix note truncated contents, numeric keypad

--- a/src/app/note/note.page.scss
+++ b/src/app/note/note.page.scss
@@ -34,10 +34,6 @@ ion-button::part(native) {
 
 ion-list {
   padding: 0;
-  h2 {
-    /* font-weight: bold; */
-    margin-bottom: .5rem;
-  }
   ion-item {
     position: relative;
     ion-icon {
@@ -46,14 +42,23 @@ ion-list {
       right: .5rem;
     }
   }
-  .content-short {
+  h2, .content-short {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -moz-line-clamp: 2;
     -webkit-box-orient: vertical;
     -moz-box-orient: vertical;
+  }
+  h2 {
+    margin-bottom: .5rem;
+    -webkit-line-clamp: 1;
+    -moz-line-clamp: 1;
+    /* autoprefixer: ignore next */
+  }
+  .content-short {
+    -webkit-line-clamp: 2;
+    -moz-line-clamp: 2;
+    /* autoprefixer: ignore next */
   }
 }
 
